# govee-hass-connect

./: .gitignore  CHANGELOG.md  README.md  hacs.json  pyproject.toml
.github/workflows/: publish.yml  release.yml
custom_components/govee_hass_connect/: __init__.py  config_flow.py  const.py  coordinator.py  light.py  manifest.json  strings.json
custom_components/govee_hass_connect/govee_api/: __init__.py  controller.py  device.py  device_registry.py  light_capabilities.py
